lib/queue-msg-macro/tests/unit-struct.stderr
error: queue-msg only supports Named and Unnamed Struct fields
 --> tests/unit-struct.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^
